<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vigo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drop_point">Drop Point</string>
    <string name="pick_up_point">Pick Up Point</string>
    <string name="name">Name</string>
    <string name="pick_date">Pick Date</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="pickup_date">Pickup Date</string>


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="login">Login</string>
    <string name="choose_mode_transport">Please choose a mode of transport</string>
    <string name="pick_date_toast">Please pick a date</string>
    <string name="pick_time_toast">Please pick a time</string>
    <string name="error_occurred">Some Problem Occurred</string>
    <string name="booking_successful">Booking Successful</string>
    <string name="DRIVER_REACHED">Your driver is ready to pick you up.</string>
    <string name="TRIP_BEGAN_VERIFY">Please verify that your trip has begun.</string>
    <string name="booking_confirmed">Your booking has been made you can view details and cancel your booking from Your Future Rides</string>
    <string name="verify">Verify OTP</string>
    <string name="location_not_available">Your Current Location Isn\'t Available</string>
    <string name="vehicle_type">Choose Vehicle Type</string>
</resources>
