<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appMainLight">

    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dip"
    android:id="@+id/relativeLayout2"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Booking Details"
        android:id="@+id/heading"
        android:textColor="@color/appMain"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dip"
        android:paddingTop="5dip" />

    <ImageView
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:id="@+id/back_button_image"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_left222"

         />

</RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/material_blue_grey_950"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:visibility="visible"
        android:layout_marginBottom="15dip"></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/booking_section_border"
        android:layout_marginTop="15dip"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginBottom="15dip"
        android:textSize="18sp"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:hint="@string/name"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pickup_point"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/booking_section_border"
        android:layout_marginTop="15dip"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginBottom="15dip"
        android:textSize="18sp"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:hint="@string/pick_up_point"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drop_point"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/booking_section_border"
        android:layout_marginTop="15dip"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginBottom="15dip"
        android:textSize="18sp"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:hint="@string/drop_point"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/booking_section_border"
        android:layout_marginTop="15dip"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginBottom="15dip"
        android:textSize="18sp"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:hint="@string/pickup_date"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/booking_section_border"
        android:layout_marginTop="15dip"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginBottom="15dip"
        android:textSize="18sp"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:hint="@string/pickup_time"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dip"
        android:gravity="center">



            <RadioButton
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Ride Share"
                android:id="@+id/ride_share"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/appMain" />

            <RadioButton
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:gravity="center"
                android:textSize="20sp"
                android:text="Bulk"
                android:id="@+id/bulk"
                android:layout_weight="1"
                android:textColor="@color/appMain" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Book"
            android:id="@+id/Book"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/booking_button_background"
            android:textSize="22sp"
            android:padding="5dip"
            android:textColor="@color/appMainLight"/>
    </RelativeLayout>

</LinearLayout>